test/corpus/cil.txt
==================
Hello World
==================

.assembly Hello
{
  .ver 1:0:0:0
}

.method public static void Main() cil managed
{
  .entrypoint
  ldstr "Hello, World!"
  call void [System.Console]System.Console::WriteLine(string)
  ret
}

---

(file
  (def_module
    (def_assembly
      (keyword)
      (id_assembly
        (id
          (symbol
            (word))))
      (option_assembly
        (keyword)
        (version)))
    (def_method
      (keyword)
      (modifier
        (word))
      (modifier
        (word))
      (type
        (intrinsic))
      (id_method
        (id
          (symbol
            (word))))
      (args)
      (modifier
        (word))
      (modifier
        (word))
      (option_method
        (keyword))
      (statement
        (instruction)
        (string
          (string_single
            (string_content))))
      (statement
        (instruction)
        (ref_method
          (type
            (intrinsic))
          (ref_class
            (ref_assembly
              (id_assembly
                (id
                  (nesting
                    (symbol
                      (word)))
                  (symbol
                    (word)))))
            (id_class
              (id
                (nesting
                  (symbol
                    (word)))
                (symbol
                  (word)))))
          (id_method
            (id
              (symbol
                (word))))
          (args
            (args_item
              (type
                (intrinsic))))))
      (statement
        (instruction)))))

==================
Class Definition
==================

.class public auto ansi beforefieldinit MyNamespace.MyClass
       extends [System.Runtime]System.Object
{
  .custom instance void [System.Runtime]System.Runtime.CompilerServices.NullableContextAttribute::.ctor(int8) = ( 01 00 01 00 00 )

  .method public hidebysig specialname rtspecialname 
          instance void .ctor() cil managed
  {
    ldarg.0
    call instance void [System.Runtime]System.Object::.ctor()
    ret
  }
}

---

(file
  (def_module
    (def_class
      (keyword)
      (modifier
        (word))
      (modifier
        (word))
      (modifier
        (word))
      (modifier
        (word))
      (id_class
        (id
          (nesting
            (symbol
              (word)))
          (symbol
            (word))))
      (modifier)
      (ref_class
        (ref_assembly
          (id_assembly
            (id
              (nesting
                (symbol
                  (word)))
              (symbol
                (word)))))
        (id_class
          (id
            (nesting
              (symbol
                (word)))
            (symbol
              (word)))))
      (attribute
        (keyword)
        (ref_method
          (modifier)
          (type
            (intrinsic))
          (ref_class
            (ref_assembly
              (id_assembly
                (id
                  (nesting
                    (symbol
                      (word)))
                  (symbol
                    (word)))))
            (id_class
              (id
                (nesting
                  (nesting
                    (nesting
                      (symbol
                        (word)))
                    (symbol
                      (word)))
                  (symbol
                    (word)))
                (symbol
                  (word)))))
          (id_method
            (keyword))
          (args
            (args_item
              (type
                (intrinsic)))))
        (blob
          (byte)
          (byte)
          (byte)
          (byte)
          (byte)))
      (def_method
        (keyword)
        (modifier
          (word))
        (modifier
          (word))
        (modifier
          (word))
        (modifier
          (word))
        (modifier
          (word))
        (type
          (intrinsic))
        (id_method
          (keyword))
        (args)
        (modifier
          (word))
        (modifier
          (word))
        (statement
          (instruction))
        (statement
          (instruction)
          (ref_method
            (modifier)
            (type
              (intrinsic))
            (ref_class
              (ref_assembly
                (id_assembly
                  (id
                    (nesting
                      (symbol
                        (word)))
                    (symbol
                      (word)))))
              (id_class
                (id
                  (nesting
                    (symbol
                      (word)))
                  (symbol
                    (word)))))
            (id_method
              (keyword))
            (args)))
        (statement
          (instruction))))))

==================
Method Locals and Instructions
==================

.method private hidebysig static void Foo(int32 x) cil managed
{
  .locals init (int32 V_0, string V_1)
  .maxstack 2
  ldarg.0
  ldc.i4.s 10
  br label_exit
  ret
}

---

(file
  (def_module
    (def_method
      (keyword)
      (modifier
        (word))
      (modifier
        (word))
      (modifier
        (word))
      (type
        (intrinsic))
      (id_method
        (id
          (symbol
            (word))))
      (args
        (args_item
          (type
            (intrinsic))
          (id_parameter
            (symbol
              (word)))))
      (modifier
        (word))
      (modifier
        (word))
      (option_method
        (keyword)
        (keyword)
        (args
          (args_item
            (type
              (intrinsic))
            (id_parameter
              (symbol
                (word))))
          (args_item
            (type
              (intrinsic))
            (id_parameter
              (symbol
                (word))))))
      (option_method
        (keyword)
        (integer))
      (statement
        (instruction))
      (statement
        (instruction)
        (integer))
      (statement
        (instruction)
        (id_label
          (symbol
            (word))))
      (statement
        (instruction)))))
